// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should ask user to turn on notification settings if they did not turn it on after creating an Article 1`] = `
Array [
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "Is the AI analysis helpful?",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingAll": "xl",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "👍 Yes",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=aiReplyFeedback&aiResponseId=undefined&vote=UPVOTE",
          },
          "color": "#00B172",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "😕 No",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=aiReplyFeedback&aiResponseId=undefined&vote=DOWNVOTE",
          },
          "color": "#FB5959",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": Object {
      "contents": Array [
        Object {
          "color": "#00B172",
          "size": "lg",
          "text": "Provide feedback to AI analysis",
          "type": "text",
        },
      ],
      "layout": "vertical",
      "paddingBottom": "none",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "It would help fact checkers a lot if you provide more detail :)",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Provide detail",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=comment&articleId=new-article-id",
          },
          "color": "#00B172",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": Object {
      "contents": Array [
        Object {
          "color": "#00B172",
          "size": "lg",
          "text": "Provide more detail",
          "type": "text",
        },
      ],
      "layout": "vertical",
      "paddingBottom": "none",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "You can turn on notifications if you want Cofacts to notify you when someone replies to this message.",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Go to settings",
            "type": "uri",
            "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=setting&utm_source=rumors-line-bot&utm_medium=reply-request",
          },
          "color": "#00B172",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "header": Object {
      "contents": Array [
        Object {
          "text": "🔔  Receive updates",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "paddingBottom": "none",
      "type": "box",
    },
    "type": "bubble",
  },
  Object {
    "body": Object {
      "contents": Array [
        Object {
          "text": "We all get by with a little help from our friends 🌟 Share your question to friends, someone might be able to help!",
          "type": "text",
          "wrap": true,
        },
      ],
      "layout": "vertical",
      "type": "box",
    },
    "footer": Object {
      "contents": Array [
        Object {
          "action": Object {
            "label": "Share on LINE",
            "type": "uri",
            "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
        Object {
          "action": Object {
            "label": "Share on Facebook",
            "type": "uri",
            "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id",
          },
          "color": "#ffb600",
          "style": "primary",
          "type": "button",
        },
      ],
      "layout": "vertical",
      "spacing": "sm",
      "type": "box",
    },
    "type": "bubble",
  },
]
`;

exports[`should create a UserArticleLink when creating a Article 1`] = `
Array [
  Object {
    "_id": "_id",
    "articleId": "new-article-id",
    "createdAt": 2020-01-01T00:00:00.000Z,
    "lastViewedAt": 2020-01-01T00:00:00.000Z,
    "userId": "user-id-0",
  },
]
`;

exports[`should submit article if user agrees to submit: has AI reply 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "foo",
        "text": "Some text forwarded by the user",
        "type": "text",
      },
    ],
    "sessionId": 1577923200000,
  },
  "replies": Array [
    Object {
      "altText": "The message has now been recorded at Cofacts for volunteers to fact-check. Thank you for submitting!",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "The message has now been recorded at Cofacts for volunteers to fact-check. Thank you for submitting!",
              "type": "text",
              "wrap": true,
            },
            Object {
              "action": Object {
                "label": "View reported message",
                "type": "uri",
                "uri": "https://dev.cofacts.tw/article/new-article-id",
              },
              "margin": "md",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "This article is still under verification, please refrain from believing it for now. \\\\nBelow is the preliminary analysis result by the bot, hoping to provide you with some insights.",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "This article is still under verification, please refrain from believing it for now. \\\\nBelow is the preliminary analysis result by the bot, hoping to provide you with some insights.",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "createdAt": undefined,
      "sender": Object {
        "iconUrl": "/static/img/aireply.png?cachebust=20230405",
        "name": "AI analysis",
      },
      "text": "Hello from ChatGPT",
      "type": "text",
    },
    Object {
      "altText": "After reading the automatic analysis by the bot above, you can:",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "After reading the automatic analysis by the bot above, you can:",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Your submission is now recorded at https://dev.cofacts.tw/article/new-article-id",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "Is the AI analysis helpful?",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "paddingAll": "xl",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "👍 Yes",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=aiReplyFeedback&aiResponseId=undefined&vote=UPVOTE",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "😕 No",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=aiReplyFeedback&aiResponseId=undefined&vote=DOWNVOTE",
                  },
                  "color": "#FB5959",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#00B172",
                  "size": "lg",
                  "text": "Provide feedback to AI analysis",
                  "type": "text",
                },
              ],
              "layout": "vertical",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "It would help fact checkers a lot if you provide more detail :)",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Provide detail",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=comment&articleId=new-article-id",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#00B172",
                  "size": "lg",
                  "text": "Provide more detail",
                  "type": "text",
                },
              ],
              "layout": "vertical",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "We all get by with a little help from our friends 🌟 Share your question to friends, someone might be able to help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should submit article if user agrees to submit: has no AI reply 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "foo",
        "text": "Some text forwarded by the user",
        "type": "text",
      },
    ],
    "sessionId": 1577923200000,
  },
  "replies": Array [
    Object {
      "altText": "The message has now been recorded at Cofacts for volunteers to fact-check. Thank you for submitting!",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "The message has now been recorded at Cofacts for volunteers to fact-check. Thank you for submitting!",
              "type": "text",
              "wrap": true,
            },
            Object {
              "action": Object {
                "label": "View reported message",
                "type": "uri",
                "uri": "https://dev.cofacts.tw/article/new-article-id-2",
              },
              "margin": "md",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "In the meantime, you can:",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "In the meantime, you can:",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Your submission is now recorded at https://dev.cofacts.tw/article/new-article-id-2",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "It would help fact checkers a lot if you provide more detail :)",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Provide detail",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=comment&articleId=new-article-id-2",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#00B172",
                  "size": "lg",
                  "text": "Provide more detail",
                  "type": "text",
                },
              ],
              "layout": "vertical",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "We all get by with a little help from our friends 🌟 Share your question to friends, someone might be able to help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id-2",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id-2",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;

exports[`should submit image article if user agrees to submit 1`] = `
Object {
  "context": Object {
    "msgs": Array [
      Object {
        "id": "6530038889933",
        "type": "image",
      },
    ],
    "sessionId": 1577923200000,
  },
  "replies": Array [
    Object {
      "altText": "The message has now been recorded at Cofacts for volunteers to fact-check. Thank you for submitting!",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "The message has now been recorded at Cofacts for volunteers to fact-check. Thank you for submitting!",
              "type": "text",
              "wrap": true,
            },
            Object {
              "action": Object {
                "label": "View reported message",
                "type": "uri",
                "uri": "https://dev.cofacts.tw/article/new-article-id",
              },
              "margin": "md",
              "type": "button",
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "In the meantime, you can:",
      "contents": Object {
        "body": Object {
          "contents": Array [
            Object {
              "text": "In the meantime, you can:",
              "type": "text",
              "wrap": true,
            },
          ],
          "layout": "vertical",
          "type": "box",
        },
        "type": "bubble",
      },
      "type": "flex",
    },
    Object {
      "altText": "Your submission is now recorded at https://dev.cofacts.tw/article/new-article-id",
      "contents": Object {
        "contents": Array [
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "It would help fact checkers a lot if you provide more detail :)",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Provide detail",
                    "type": "uri",
                    "uri": "https://liff.line.me/1563196602-X6mLdDkW?p=comment&articleId=new-article-id",
                  },
                  "color": "#00B172",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "header": Object {
              "contents": Array [
                Object {
                  "color": "#00B172",
                  "size": "lg",
                  "text": "Provide more detail",
                  "type": "text",
                },
              ],
              "layout": "vertical",
              "paddingBottom": "none",
              "type": "box",
            },
            "type": "bubble",
          },
          Object {
            "body": Object {
              "contents": Array [
                Object {
                  "text": "We all get by with a little help from our friends 🌟 Share your question to friends, someone might be able to help!",
                  "type": "text",
                  "wrap": true,
                },
              ],
              "layout": "vertical",
              "type": "box",
            },
            "footer": Object {
              "contents": Array [
                Object {
                  "action": Object {
                    "label": "Share on LINE",
                    "type": "uri",
                    "uri": "line://msg/text/?Please%20help%20me%20verify%20if%20this%20is%20true%3A%20https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
                Object {
                  "action": Object {
                    "label": "Share on Facebook",
                    "type": "uri",
                    "uri": "https://www.facebook.com/dialog/share?openExternalBrowser=1&app_id=719656818195367&display=popup&hashtag=%23ReportedToCofacts&href=https%3A%2F%2Fdev.cofacts.tw%2Farticle%2Fnew-article-id",
                  },
                  "color": "#ffb600",
                  "style": "primary",
                  "type": "button",
                },
              ],
              "layout": "vertical",
              "spacing": "sm",
              "type": "box",
            },
            "type": "bubble",
          },
        ],
        "type": "carousel",
      },
      "type": "flex",
    },
  ],
}
`;
